--- a/src/container/auth/auth.scss
+++ b/src/container/auth/auth.scss
@@ -2,8 +2,8 @@
     width: 100%;
     height: 100vh;
     display: flex;
-    align-items: center;
     justify-content: center;
+    margin-top: 40px;
 }
 .form-auth {
     @extend .auth;
